--- a/Lesson_3/index.html
+++ b/Lesson_3/index.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<title>Lesson 3</title>
 </head>
-<style>
+<!-- <style>
 	h2 {
 		color: green;
 	}
@@ -21,7 +21,7 @@
 	a {
 		color: grey;
 	}
-</style>
+</style> -->
 
 <body>
 	<!--(1) Инлайновые стили (атрибут style)-->
