--- a/Lesson_3/index.html
+++ b/Lesson_3/index.html
@@ -128,12 +128,16 @@
 			<p class="tel">Телефон</p>
 			<p class="mail" style="color:yellow;">Почта</p>
 		</div>
-		<ul class="list">Мы в социальных сетях
-			<li class="item"><a href="#" class="link">Facebook</a></li>
-			<li class="item"><a href="#" class="link">Instagram</a></li>
-			<li class="item"><a href="#" class="link"><span>Youtube</span></a></li>
-			<li class="item"><a href="#" class="link" style="color:yellow;">Google+</a></li>
-		</ul>
+		<div class="contact">
+			<p class="text">Мы в социальных сетях</p>
+			<ul class="list">
+				<li class="item"><a href="#" class="link">Facebook</a></li>
+				<li class="item"><a href="#" class="link">Instagram</a></li>
+				<li class="item"><a href="#" class="link"><span>Youtube</span></a></li>
+				<li class="item"><a href="#" class="link" style="color:yellow;">Google+</a></li>
+			</ul>
+		</div>
+		
 	</footer>
 </body>
 
