--- a/Lesson_3/index.html
+++ b/Lesson_3/index.html
@@ -28,7 +28,7 @@
 	<!--(2) Обращение из HTML (тег style)-->
 	<!--(3) Подключение внешнего файла (тег дштл + файл *.css)-->
 
-	<header id="hot" class="header">
+	<header  class="header">
 		<nav class="menu">
 			<ul class="list">
 				<li class="item"><a class="link" href="#" style="color:yellow;">Главная</a></li>
