--- a/Lesson_3/index.html
+++ b/Lesson_3/index.html
@@ -9,24 +9,25 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<title>Lesson 3</title>
 </head>
-<!-- <style>
-	h2 {
-		color: green;
-	}
 
-	p {
-		color: red;
-	}
-
-	a {
-		color: grey;
-	}
-</style> -->
 
 <body>
 	<!--(1) Инлайновые стили (атрибут style)-->
 	<!--(2) Обращение из HTML (тег style)-->
 	<!--(3) Подключение внешнего файла (тег дштл + файл *.css)-->
+	<style>
+		h2 {
+			color: green;
+		}
+
+		p {
+			color: red;
+		}
+
+		a {
+			color: grey;
+		}
+	</style>
 
 	<header  class="header">
 		<nav class="menu">
