--- a/Lesson_3/index.html
+++ b/Lesson_3/index.html
@@ -9,13 +9,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<title>Lesson 3</title>
 </head>
-
-
-<body>
-	<!--(1) Инлайновые стили (атрибут style)-->
-	<!--(2) Обращение из HTML (тег style)-->
-	<!--(3) Подключение внешнего файла (тег дштл + файл *.css)-->
-	<style>
+<!-- 	<style>
 		h2 {
 			color: green;
 		}
@@ -27,7 +21,13 @@
 		a {
 			color: grey;
 		}
-	</style>
+	</style> -->
+
+<body>
+	<!--(1) Инлайновые стили (атрибут style)-->
+	<!--(2) Обращение из HTML (тег style)-->
+	<!--(3) Подключение внешнего файла (тег дштл + файл *.css)-->
+	
 
 	<header  class="header">
 		<nav class="menu">
