--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -49,7 +49,7 @@
 		<footer class="footer">
 			<div class="footer__container _container">
 				<div class="footer__social">
-					<h2 class="footer__title">Контакты:</h2>
+					<h2 class="footer__title">Связаться:</h2>
 					<ul class="footer__list">
 						<li class="footer__item">Мой телефон:
 							<a href="tel:+380993603612" class="footer__link">+380993603612</a>
