--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -15,9 +15,9 @@
 					<img src="img/logo.png" alt="logo" class="header__img">
 				</div>
 				<h2 class="header__title _anim-items _anim-no-hide">Приветствую тебя на своей странице,гость!</h2>
-				<p class="block__text _anim-items">Тебе пришла в голову замечательная мысль или идея и ты понял,что можешь изменить мир к лучшему?</p>
-				<p class="block__text _anim-items">Для реализации задуманного тебе необходимо создать свой сайт?</p>
-				<p class="block__text _anim-items">Я смогу тебе помочь воплотить твою идею с технической стороны вопроса,а именно:—выполню работы по вёрстке сайта
+				<p class="header__text _anim-items">Тебе пришла в голову замечательная мысль или идея и ты понял,что можешь изменить мир к лучшему?</p>
+				<p class="header__text _anim-items">Для реализации задуманного тебе необходимо создать свой сайт?</p>
+				<p class="header__text _anim-items">Я смогу тебе помочь воплотить твою идею с технической стороны вопроса,а именно:—выполню работы по вёрстке сайта
 					(сверстаю веб-страницы по полученному от дизайнера, утверждённому, дизайн-макету страницы.)</p>
 
 			</div>
