--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -11,22 +11,24 @@
 	<body>
 		<header class="header">
 			<div class="header__container _container">
-				<div class="header__logo _anim-items _anim-no-hide">
-					<img src="img/logo.png" alt="logo" class="header__img">
+				<div class="header__content">
+					<div class="header__logo _anim-items _anim-no-hide">
+						<img src="img/logo.png" alt="logo" class="header__img">
+					</div>
+					<h2 class="header__title _anim-items _anim-no-hide">Приветствую тебя на своей странице,гость!</h2>
+					<p class="header__text _anim-items">Тебе пришла в голову замечательная мысль или идея и ты понял,что можешь изменить мир к лучшему?</p>
+					<p class="header__text _anim-items">Для реализации задуманного тебе необходимо создать свой сайт?</p>
+					<p class="header__text _anim-items">Я смогу тебе помочь воплотить твою идею с технической стороны вопроса,а именно:—выполню работы по вёрстке сайта
+						(сверстаю веб-страницы по полученному от дизайнера, утверждённому, дизайн-макету страницы.)</p>
 				</div>
-				<h2 class="header__title _anim-items _anim-no-hide">Приветствую тебя на своей странице,гость!</h2>
-				<p class="header__text _anim-items">Тебе пришла в голову замечательная мысль или идея и ты понял,что можешь изменить мир к лучшему?</p>
-				<p class="header__text _anim-items">Для реализации задуманного тебе необходимо создать свой сайт?</p>
-				<p class="header__text _anim-items">Я смогу тебе помочь воплотить твою идею с технической стороны вопроса,а именно:—выполню работы по вёрстке сайта
-					(сверстаю веб-страницы по полученному от дизайнера, утверждённому, дизайн-макету страницы.)</p>
-
 			</div>
+
 		</header>
 		<main class="page">
 			<section class="block">
 				<div class="block__container _container">
 					<div class="block__content _anim-items">
-						<h2 class="block__title _anim-show">Bёрстка сайтов.</h2>
+						<h2 class="block__title _anim-items">Bёрстка сайтов.</h2>
 						<p class="block__text _anim-items">Вёрстка веб-страниц – создание структуры гипертекстового документа на основе HTML-разметки,
 							как правило, при использовании таблиц стилей и клиентских сценариев, таким образом,
 							чтобы элементы дизайна выглядели аналогично макету.</p>
