--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -53,14 +53,14 @@
 				<div class="footer__social">
 					<h2 class="footer__title">Контакты:</h2>
 					<ul class="footer__list">
-						<li class="footer__item">Мой телефон:
-							<a href="tel:+380993603612" class="footer__link">+380993603612</a>
+						<li class="footer__item">
+							<a href="tel:+380993603612" class="footer__link"><img src="img/mobil.svg" alt="icon" class="footer__icon">+380993603612</a>
 						</li>
-						<li class="footer__item">Мой телеграмм:
-							<a href="https://t.me/Garyssman" target="_blank" class="footer__link">@Garyssman</a>
+						<li class="footer__item">
+							<a href="https://t.me/Garyssman" target="_blank" class="footer__link"><img src="img/telegram.svg" alt="icon" class="footer__icon">@Garyssman</a>
 						</li>
-						<li class="footer__item">Моя почта:
-							<a href="mailto:Garyssmann@gmail.com" class="footer__link">Garyssmann@gmail.com</a>
+						<li class="footer__item">
+							<a href="mailto:Garyssmann@gmail.com" class="footer__link"><img src="img/mail.svg" alt="icon" class="footer__icon">Garyssmann@gmail.com</a>
 						</li>
 					</ul>
 				</div>
