--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -63,7 +63,7 @@
 						</li>
 					</ul>
 				</div>
-				<h2 class="footer__title">2021 © Design created by Garyssman</h2>
+				<h2 class="footer__title">2021 © Design created by ©Garyssman©</h2>
 			</div>
 		</footer>
 		<script src="js/script.js"></script>
