--- a/Healthy/index.html
+++ b/Healthy/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="rootpage">
-		<h1>Верстка «Healthy food»</h1>
+		<h1>«Healthy food»</h1>
 		<div class="rootpage__info">
 			Особенности проекта
 		</div>
@@ -17,10 +17,6 @@
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Главная</a></li>
 		</ol>
-<!-- 		<h2>Попапы:</h2>
-		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html#"></a></li>
-		</ol> -->
 		<div class="rootpage__tnx">
 			<h2>Спасибо за заказ!</h2>
 			<p>Буду рад хорошему отзыву.</p>
