--- a/Garyss/home.html
+++ b/Garyss/home.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220214123555">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -116,6 +116,6 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20220214123555"></script>
+	<script src="js/app.min.js"></script>
 </body>
 </html>
