--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -89,7 +89,7 @@
 					<li class="list-work__item"><a href="https://garyssmann.github.io/Garyss/" target="_blank" class="list-work__link">Работа № 1</a></li>
 					<li class="list-work__item"><a href="https://garyssmann.github.io/Healthy/" target="_blank" class="list-work__link">Работа № 2</a></li>
 					<li class="list-work__item"><a href="https://garyssmann.github.io/lessons/" target="_blank" class="list-work__link">Работа № 3</a></li>
-					<li class="list-work__item"><a href="Garyssmann.github.io/start/" target="_blank" class="list-work__link">Работа № 4</a></li>
+					<li class="list-work__item"><a href="https://garyssmann.github.io/start/" target="_blank" class="list-work__link">Работа № 4</a></li>
 					<li class="list-work__item"><a href="https://garyssmann.github.io/timberHouse/" target="_blank" class="list-work__link">Работа № 5</a></li>
 				</ul>
 			</div>
