--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -103,10 +103,10 @@
 					<h2 class="popup__title">Связаться:</h2>
 					<ul class="popup__list">
 						<li class="popup__item">Мой телефон:
-							<a href="tel:+380993603612" class="popup__link"><img src="img/mobil.svg" alt="icon" class="popup__icon">+380966181535</a>
+							<a href="tel:+380966181535" class="popup__link"><img src="img/mobil.svg" alt="icon" class="popup__icon">+380966181535</a>
 						</li>
 						<li class="popup__item">Мой телеграмм:
-							<a href="https://t.me/Garyssman" target="_blank" class="popup__link"><img src="img/telegram.svg" alt="icon" class="popup__icon">Humanum ©</a>
+							<a href="https://t.me/HumanumAnonimus" target="_blank" class="popup__link"><img src="img/telegram.svg" alt="icon" class="popup__icon">Humanum ©</a>
 						</li>
 <!-- 						<li class="popup__item">Моя почта:
 							<a href="mailto:Garyssmann@gmail.com" class="popup__link"><img src="img/mail.svg" alt="icon" class="popup__icon">Garyssmann@gmail.com</a>
