--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -108,9 +108,9 @@
 						<li class="popup__item">Мой телеграмм:
 							<a href="https://t.me/HumanumAnonimus" target="_blank" class="popup__link"><img src="img/telegram.svg" alt="icon" class="popup__icon">Humanum ©</a>
 						</li>
-<!-- 						<li class="popup__item">Моя почта:
-							<a href="mailto:Garyssmann@gmail.com" class="popup__link"><img src="img/mail.svg" alt="icon" class="popup__icon">Garyssmann@gmail.com</a>
-						</li> -->
+						<li class="popup__item">Моя почта:
+							<a href="mailto:AtlantTitanZeus@outlook.com" class="popup__link"><img src="img/mail.svg" alt="icon" class="popup__icon">AtlantTitanZeus@outlook.com</a>
+						</li>
 					</ul>
 				</div>
 			</div>
