--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -86,7 +86,7 @@
 			<div class="popup__content">
 				<button data-close type="button" class="popup__close">Закрыть</button>
 				<ul class="popup__work-list list-work">
-					<li class="list-work__item"><a href="https://garyssmann.github.io/Garyss/" target="_blank" class="list-work__link">Работа № 1</a></li>
+					<li class="list-work__item"><a href="https://garyssmann.github.io/SuP/" target="_blank" class="list-work__link">Работа № 1</a></li>
 					<li class="list-work__item"><a href="https://garyssmann.github.io/Healthy/" target="_blank" class="list-work__link">Работа № 2</a></li>
 					<li class="list-work__item"><a href="https://garyssmann.github.io/lessons/" target="_blank" class="list-work__link">Работа № 3</a></li>
 					<li class="list-work__item"><a href="https://garyssmann.github.io/start/" target="_blank" class="list-work__link">Работа № 4</a></li>
