--- a/timberHouse/index.html
+++ b/timberHouse/index.html
@@ -9,6 +9,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="shortcut icon" href="favicon.ico">
     <title>timber House</title>
 </head>
 
