--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -87,11 +87,12 @@
 				<button data-close type="button" class="popup__close">Закрыть</button>
 				<ul class="popup__work-list list-work">
 					<li class="list-work__item"><a href="http://v93784or.beget.tech/" target="_blank" class="list-work__link">Работа № 1</a></li>
-					<li class="list-work__item"><a href="https://garyssmann.github.io/SuP/" target="_blank" class="list-work__link">Работа № 2</a></li>
-					<li class="list-work__item"><a href="https://garyssmann.github.io/Healthy/" target="_blank" class="list-work__link">Работа № 3</a></li>
-					<li class="list-work__item"><a href="https://garyssmann.github.io/lessons/" target="_blank" class="list-work__link">Работа № 4</a></li>
-					<li class="list-work__item"><a href="https://garyssmann.github.io/start/" target="_blank" class="list-work__link">Работа № 5</a></li>
-					<li class="list-work__item"><a href="https://garyssmann.github.io/timberHouse/" target="_blank" class="list-work__link">Работа № 6</a></li>
+					<li class="list-work__item"><a href="http://a99360yc.beget.tech/" target="_blank" class="list-work__link">Работа № 2</a></li>
+					<li class="list-work__item"><a href="https://garyssmann.github.io/SuP/" target="_blank" class="list-work__link">Работа № 3</a></li>
+					<li class="list-work__item"><a href="https://garyssmann.github.io/Healthy/" target="_blank" class="list-work__link">Работа № 4</a></li>
+					<li class="list-work__item"><a href="https://garyssmann.github.io/lessons/" target="_blank" class="list-work__link">Работа № 5</a></li>
+					<li class="list-work__item"><a href="https://garyssmann.github.io/start/" target="_blank" class="list-work__link">Работа № 6</a></li>
+					<li class="list-work__item"><a href="https://garyssmann.github.io/timberHouse/" target="_blank" class="list-work__link">Работа № 7</a></li>
 				</ul>
 			</div>
 		</div>
