--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -95,6 +95,7 @@
 					<li class="list-work__item"><a href="https://garyssmann.github.io/timberHouse/" target="_blank" class="list-work__link">Работа № 7</a></li>
 					<li class="list-work__item"><a href="https://garyssmann.github.io/rentiz/" target="_blank" class="list-work__link">Работа № 8</a></li>
 					<li class="list-work__item"><a href="https://garyssmann.github.io/farmVest/" target="_blank" class="list-work__link">Работа № 9</a></li>
+					<li class="list-work__item"><a href="https://garyssmann.github.io/Pompeo/" target="_blank" class="list-work__link">Работа № 10</a></li>
 				</ul>
 			</div>
 		</div>
