--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -108,13 +108,13 @@
 					<h2 class="popup__title">Связаться:</h2>
 					<ul class="popup__list">
 						<li class="popup__item">Мой телефон:
-							<a href="tel:+380993603612" class="popup__link"><img src="img/mobil.svg" alt="icon" class="popup__icon">+380993603612</a>
+<!-- 							<a href="tel:+380993603612" class="popup__link"><img src="img/mobil.svg" alt="icon" class="popup__icon">+380993603612</a> -->
 						</li>
 						<li class="popup__item">Мой телеграмм:
-							<a href="https://t.me/Garyssman" target="_blank" class="popup__link"><img src="img/telegram.svg" alt="icon" class="popup__icon">Garyssman©</a>
+							<a href="https://t.me/Garyss_Mann" target="_blank" class="popup__link"><img src="img/telegram.svg" alt="icon" class="popup__icon">NoName©</a>
 						</li>
 						<li class="popup__item">Моя почта:
-							<a href="mailto:alleabsolut@outlook.com" class="popup__link"><img src="img/mail.svg" alt="icon" class="popup__icon">alleabsolut@outlook.com</a>
+<!-- 							<a href="mailto:alleabsolut@outlook.com" class="popup__link"><img src="img/mail.svg" alt="icon" class="popup__icon">alleabsolut@outlook.com</a> -->
 						</li>
 					</ul>
 				</div>
