--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -26,7 +26,7 @@
 		<header data-scroll="90" data-scroll-show class="header">
 			<div class="header__container">
 				<div class="header__logo">
-					<a href="" class="header__image"><picture><source srcset="img/Logo.webp" type="image/webp"><img src="img/Logo.png" alt="logo" class="header__img"></picture></a>
+<!-- 					<a href="" class="header__image"><picture><source srcset="img/Logo.webp" type="image/webp"><img src="img/Logo.png" alt="logo" class="header__img"></picture></a> -->
 				</div>
 				<div class="header__menu menu">
 					<nav class="menu__body">
@@ -66,7 +66,7 @@
 			<div class="footer__container">
 				<div class="footer__bottom">
 					<div class="footer__logo">
-						<a href="#" class="footer__image"><picture><source srcset="img/Logo.webp" type="image/webp"><img src="img/Logo.png" alt="logo" class="footer__img"></picture></a>
+<!-- 						<a href="#" class="footer__image"><picture><source srcset="img/Logo.webp" type="image/webp"><img src="img/Logo.png" alt="logo" class="footer__img"></picture></a> -->
 						<div class="footer__copyrait">©Designed by ©Garyss©Man. All Rights Reserved.©</div>
 					</div>
 				</div>
@@ -77,7 +77,7 @@
 		<div class="popup__wrapper">
 			<div class="popup__content">
 				<button data-close type="button" class="popup__close">Закрыть</button>
-				<h2 class="popup__titul">©Garyss©man</h2>
+				<h2 class="popup__titul">NoName©</h2>
 			</div>
 		</div>
 	</div>
