--- a/Garyss/index.html
+++ b/Garyss/index.html
@@ -111,7 +111,7 @@
 <!-- 							<a href="tel:+380993603612" class="popup__link"><img src="img/mobil.svg" alt="icon" class="popup__icon">+380993603612</a> -->
 						</li>
 						<li class="popup__item">Мой телеграмм:
-							<a href="https://t.me/NewNeoMatrix" target="_blank" class="popup__link"><img src="img/telegram.svg" alt="icon" class="popup__icon">NoName©</a>
+							<a href="https://t.me/NewNeoMatrix" target="_blank" class="popup__link"><img src="img/telegram.svg" alt="icon" class="popup__icon">©</a>
 						</li>
 						<li class="popup__item">Моя почта:
 <!-- 							<a href="mailto:alleabsolut@outlook.com" class="popup__link"><img src="img/mail.svg" alt="icon" class="popup__icon">alleabsolut@outlook.com</a> -->
